frontend/test/typecheck/success/while-return.fc
void foo(bool b) {
    while (b) {
        return;
    }
    while (b) return;
}
