frontend/test/typecheck/error/ternary-mismatch.fc
extern void sink(...);

int foo(bool b) {
    sink(b ? 1 : 2.0);
}
